changes in css , add icon for About me

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     background-color: #82b74b;
     color: #fff;
     padding: 20px;
-    text-align: center;
+    text-align: right;
 }
 
 /* Add padding to the top of the content section */
